--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java'
 
 dependencies {
+    sourceCompatibility = 1.7
+    targetCompatibility = 1.7
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
